--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,32 @@
 spring.thymeleaf.cache=false
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/autopark
+spring.datasource.url=jdbc:postgresql://localhost:5433/autopark
 spring.datasource.username=postgres
 spring.datasource.password=capmorgan
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret=IAMLEV
 jwt.expiration=1344213131231
 
+server.port = 8082
+
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html;charset=UTF-8
+spring.thymeleaf.template-resolver-order=1
+spring.thymeleaf.view-names=*.html
+spring.thymeleaf.extras.java8time.dialect=org.thymeleaf.extras.java8time.dialect.Java8TimeDialect
+
+geo.api.key=5b3ce3597851110001cf6248c6274ee1fd85413489639fc0ee33b899
+
+vehicle.uuid=0c3b18be-3d6d-440a-bcb9-20fba5a7ce12
+start.point.x=0
+start.point.y=0
+end.point.x=0
+end.point.y=0
