--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		
+		<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+		<dependency>
+		    <groupId>org.telegram</groupId>
+		    <artifactId>telegrambots</artifactId>
+		    <version>6.5.0</version>
+		</dependency>
+		
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -25,38 +34,39 @@
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-web</artifactId>
-		    <version>5.3.18</version>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
-		    <version>5.3.18</version>
 		</dependency>
 		
 		<dependency>
+		    <groupId>fr.dudie</groupId>
+		    <artifactId>nominatim-api</artifactId>
+		    <version>3.4</version>
+		</dependency>
+
+				
+		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context</artifactId>
-		    <version>5.3.18</version>
 		</dependency>		
 		
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
-		    <version>4.0.1</version>
 		    <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
-		    <version>42.5.4</version>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-web</artifactId>
-		    <version>3.0.4</version>
 		</dependency>
 		
 		<dependency>
@@ -67,14 +77,12 @@
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok</artifactId>
-		    <version>1.18.26</version>
 		    <scope>provided</scope>
 		</dependency>			
 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
-		    <version>3.0.4</version>
 		</dependency>		
 
 		<dependency>
@@ -93,15 +101,12 @@
 		    <artifactId>jjwt</artifactId>
 		    <version>0.9.1</version>
 		</dependency>
-		
-		<dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <version>1.18.26</version>
-		    <scope>provided</scope>
-		</dependency>
 	
-		
+		<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-java8time</artifactId>
+		</dependency>
+
 			
 		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
 		<dependency>
@@ -109,7 +114,15 @@
 		    <artifactId>bootstrap</artifactId>
 		    <version>5.1.3</version>
 		</dependency>
+		
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>5.6.4.Final</version>
+</dependency>
 
+				
 		
 	</dependencies>
 
